--- a/congrats.html
+++ b/congrats.html
@@ -116,8 +116,7 @@
   <div class="firework"></div>
 
   <!-- Message -->
-  <h1>🎉 Play the video to enjoy the surprise! 🎆</h1>
-
+  <h1>🎉 Enjoy the surprise! 🎆</h1>
   <!-- Video -->
   <video controls autoplay>
     <source src="Rickroll (Meme Template).mp4" type="video/mp4">
